:bug: Fix code X-overflow and adjusted margins

--- a/src/styles/components/_typography.scss
+++ b/src/styles/components/_typography.scss
@@ -1,30 +1,30 @@
 html {
   font-size: calc(16px + 0.25vw);
   font-family: "Roboto", sans-serif;
-//   * {
-//     @include desktop {
-//       font-size: calc(1rem + 0.3vw);
-//     }
-//     @include tablet {
-//       font-size: calc(1rem + 0.15vw);
-//     }
-//   }
+  //   * {
+  //     @include desktop {
+  //       font-size: calc(1rem + 0.3vw);
+  //     }
+  //     @include tablet {
+  //       font-size: calc(1rem + 0.15vw);
+  //     }
+  //   }
 }
 
 h1 {
-	font-size: 2rem;
+  font-size: 2rem;
 }
 
 h2 {
-	font-size: 1.25rem;
+  font-size: 1.5rem;
 }
 
 h3 {
-	font-size: 1rem;
+  font-size: 1.25rem;
 }
 
 .dynamic-nav {
-	font-size: 0.75rem;
+  font-size: 0.75rem;
 }
 
 .bold {
@@ -47,12 +47,12 @@ article {
       list-style-type: disc;
     }
     ul {
-      margin-left: 4rem;
+      margin-left: 1rem;
       li {
         list-style-type: upper-roman;
       }
       ul {
-        margin-left: 4rem;
+        margin-left: 1rem;
       }
     }
   }
@@ -68,6 +68,7 @@ article {
     background-color: invert($mainBackground);
     padding: 2rem;
     margin: 2rem 0;
+    overflow-x: scroll;
   }
 
   code {
@@ -79,10 +80,8 @@ article {
   // style OLs
   ol,
   li {
-    * {
-      list-style-type: decimal-leading-zero;
-      margin-left: 2rem;
-    }
+    list-style-type: decimal-leading-zero;
+    margin-left: 2rem;
   }
 
   // give headings emphasis
